tests/spec/desugar/snapshots/pipeline_nested_calls.snap
---
source: tests/spec/desugar/mod.rs
description: "fn test() { x |> add(multiply(2, 3)) |> subtract(1); }"
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 3,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Call {
                        expression: Identifier {
                            value: "subtract",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 40,
                                byte_length: 8,
                            },
                            resolution: Unresolved,
                        },
                        args: [
                            Call {
                                expression: Identifier {
                                    value: "add",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 17,
                                        byte_length: 3,
                                    },
                                    resolution: Unresolved,
                                },
                                args: [
                                    Identifier {
                                        value: "x",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 12,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                    Call {
                                        expression: Identifier {
                                            value: "multiply",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 21,
                                                byte_length: 8,
                                            },
                                            resolution: Unresolved,
                                        },
                                        args: [
                                            Literal {
                                                literal: Integer {
                                                    value: 2,
                                                    text: None,
                                                },
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 30,
                                                    byte_length: 1,
                                                },
                                            },
                                            Literal {
                                                literal: Integer {
                                                    value: 3,
                                                    text: None,
                                                },
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 33,
                                                    byte_length: 1,
                                                },
                                            },
                                        ],
                                        spread: None,
                                        type_arguments: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 21,
                                            byte_length: 14,
                                        },
                                        call_kind: Unresolved,
                                    },
                                ],
                                spread: None,
                                type_arguments: None,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 12,
                                    byte_length: 24,
                                },
                                call_kind: Unresolved,
                            },
                            Literal {
                                literal: Integer {
                                    value: 1,
                                    text: None,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 49,
                                    byte_length: 1,
                                },
                            },
                        ],
                        spread: None,
                        type_arguments: None,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 39,
                        },
                        call_kind: Unresolved,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 10,
                    byte_length: 44,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 0,
            byte_length: 54,
        },
    },
]
