tests/spec/desugar/snapshots/pipeline_triple_chained.snap
---
source: tests/spec/desugar/mod.rs
description: "fn test() { x |> f |> g |> h; }"
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 3,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Call {
                        expression: Identifier {
                            value: "h",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 27,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        args: [
                            Call {
                                expression: Identifier {
                                    value: "g",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 22,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                args: [
                                    Call {
                                        expression: Identifier {
                                            value: "f",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 17,
                                                byte_length: 1,
                                            },
                                            resolution: Unresolved,
                                        },
                                        args: [
                                            Identifier {
                                                value: "x",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 12,
                                                    byte_length: 1,
                                                },
                                                resolution: Unresolved,
                                            },
                                        ],
                                        spread: None,
                                        type_arguments: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 12,
                                            byte_length: 6,
                                        },
                                        call_kind: Unresolved,
                                    },
                                ],
                                spread: None,
                                type_arguments: None,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 12,
                                    byte_length: 11,
                                },
                                call_kind: Unresolved,
                            },
                        ],
                        spread: None,
                        type_arguments: None,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 16,
                        },
                        call_kind: Unresolved,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 10,
                    byte_length: 21,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 0,
            byte_length: 31,
        },
    },
]
