tests/spec/desugar/snapshots/pipeline_with_parens.snap
---
source: tests/spec/desugar/mod.rs
description: "fn test() { x |> (f); }"
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 3,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Call {
                        expression: Identifier {
                            value: "f",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 18,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        args: [
                            Identifier {
                                value: "x",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 12,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                        ],
                        spread: None,
                        type_arguments: None,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 8,
                        },
                        call_kind: None,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 10,
                    byte_length: 13,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 0,
            byte_length: 23,
        },
    },
]
