tests/spec/desugar/snapshots/pipeline_with_partial_application.snap
---
source: tests/spec/desugar/mod.rs
description: "fn test() { x |> add(5); }"
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 3,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Block {
            items: [
                Call {
                    expression: Identifier {
                        value: "add",
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 17,
                            byte_length: 3,
                        },
                        binding_id: None,
                        qualified: None,
                    },
                    args: [
                        Identifier {
                            value: "x",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 12,
                                byte_length: 1,
                            },
                            binding_id: None,
                            qualified: None,
                        },
                        Literal {
                            literal: Integer {
                                value: 5,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 21,
                                byte_length: 1,
                            },
                        },
                    ],
                    spread: None,
                    type_arguments: None,
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 12,
                        byte_length: 11,
                    },
                    call_kind: None,
                },
            ],
            ty: Var {
                id: uninferred,
            },
            span: Span {
                file_id: 0,
                byte_offset: 10,
                byte_length: 16,
            },
        },
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 0,
            byte_length: 26,
        },
    },
]
